--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,16 @@
   margin: 30px 0px 0px 150px;
 }
 
-img {
+/* img {
   max-width: 200px;
   margin-top: 30px;
   margin-left: 40px;
+} */
+/* 
+#five {
+  display: none;
+} */
+
+.background {
+  background-color: yellow;
 }
