show hidden div, now working on revealing other secret images when certain numbers are typed.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,20 @@
-#hidden1 {
-  display: none;
+#resultText {
   color: #fff;
   font-weight: bold;
+  margin-top: 20px;
 }
 
 .outputMargin {
   margin: 30px 0px 0px 150px;
 }
 
-/* img {
+
+img {
+  display: none;
   max-width: 200px;
   margin-top: 30px;
   margin-left: 40px;
-} */
+}
 /* 
 #five {
   display: none;
