--- a/css/styles.css
+++ b/css/styles.css
@@ -3,20 +3,19 @@
   font-weight: bold;
   margin-top: 20px;
 }
-
 .outputMargin {
   margin: 30px 0px 0px 150px;
 }
-
-
-img {
+#allen {
   display: none;
   max-width: 200px;
   margin-top: 30px;
   margin-left: 40px;
 }
-/* 
-#five {
+#jackson {
   display: none;
-} */
+  max-width: 200px;
+  margin-top: 30px;
+  margin-left: 40px;
+}
 
