--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@
 .outputMargin {
   margin: 30px 0px 0px 150px;
 }
-#allen {
+#mamba {
   display: none;
   max-width: 200px;
   margin-top: 30px;
@@ -17,5 +17,6 @@
   max-width: 200px;
   margin-top: 30px;
   margin-left: 40px;
+  max-height: 100px;
 }
 
