--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,10 @@
   color: #fff;
   font-weight: bold;
   margin-top: 20px;
+  text-align: center;
 }
 .outputMargin {
-  margin: 30px 0px 0px 150px;
+  margin: 30px 0px 0px 0px;
 }
 #mamba {
   display: none;
