--- a/css/styles.css
+++ b/css/styles.css
@@ -9,15 +9,12 @@
 }
 #mamba {
   display: none;
-  max-width: 200px;
-  margin-top: 30px;
-  margin-left: 40px;
+  margin: auto;
+  width: 50%;
 }
-#jackson {
+#reveal {
   display: none;
-  max-width: 200px;
-  margin-top: 30px;
-  margin-left: 40px;
-  max-height: 100px;
 }
+.button {
 
+}
