--- a/css/styles.css
+++ b/css/styles.css
@@ -4,17 +4,28 @@
   margin-top: 20px;
   text-align: center;
 }
+.container {
+  width: 100%;
+}
 .outputMargin {
   margin: 30px 0px 0px 0px;
 }
 #mamba {
   display: none;
+  /* justify-content: center;
+  align-items: center;
+  align-self: center; */
+}
+img {
+  display: flex;
+  flex-direction: column;
   margin: auto;
-  width: 50%;
 }
 #reveal {
   display: none;
 }
-.button {
-
+label, form, h1{
+  width: 100%;
+  text-align: center;
 }
+
