--- a/css/styles.css
+++ b/css/styles.css
@@ -22,16 +22,51 @@ img {
  #reveal {
   display: none;
   margin: 20px auto 0px auto;
-  align-items: center;
 }
 label, form, h1 {
   width: 100%;
   text-align: center;
 }
-#flip {
-background-color: #fff;
-color: #000;
-display: none;
+
+
+.f1_container.active .f1_card {
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+  box-shadow: -5px 5px 5px #aaa;
 }
-
-
+.f1_container {
+  position: relative;
+  margin:10px;
+  width: 450px;
+  height: 281px;
+  z-index : 1;
+  float:left;
+}
+.f1_container {
+  -webkit-perspective: 1000;
+  perspective: 1000;
+}
+.f1_card {
+  width: 100%;
+  height: 100%;
+  -webkit-transform-style: preserve-3d;
+  -webkit-transition: all 1.0s linear;
+  transform-style: preserve-3d;
+  transition: all 1.0s linear;
+}
+.face {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+}
+.face.back {
+  display: block;
+  -webkit-transform: rotateY(180deg);
+  transform: rotateY(180deg);
+  box-sizing: border-box;
+  color: white;
+  text-align: center;
+  background-color: #aaa;
+}
