--- a/css/styles.css
+++ b/css/styles.css
@@ -29,12 +29,12 @@ label, form, h1 {
 }
 
 
-.f1_container.active .f1_card {
+.mambaContainer.active .mambaOne {
   -webkit-transform: rotateY(180deg);
   transform: rotateY(180deg);
   box-shadow: -5px 5px 5px #aaa;
 }
-.f1_container {
+.mambaContainer {
   position: relative;
   margin:10px;
   width: 450px;
@@ -42,11 +42,11 @@ label, form, h1 {
   z-index : 1;
   float:left;
 }
-.f1_container {
+.mambaContainer {
   -webkit-perspective: 1000;
   perspective: 1000;
 }
-.f1_card {
+.mambaOne {
   width: 100%;
   height: 100%;
   -webkit-transform-style: preserve-3d;
@@ -54,14 +54,14 @@ label, form, h1 {
   transform-style: preserve-3d;
   transition: all 1.0s linear;
 }
-.face {
+.mambaFace {
   position: absolute;
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
 }
-.face.back {
+.mambaFace.Back {
   display: block;
   -webkit-transform: rotateY(180deg);
   transform: rotateY(180deg);
