--- a/css/styles.css
+++ b/css/styles.css
@@ -32,15 +32,14 @@ label, form, h1 {
 .mambaContainer.active .mambaOne {
   -webkit-transform: rotateY(180deg);
   transform: rotateY(180deg);
-  box-shadow: -5px 5px 5px #aaa;
+  /* box-shadow: -5px 5px 5px #aaa; */
 }
 .mambaContainer {
   position: relative;
-  margin:10px;
+  /* margin:10px;
   width: 450px;
-  height: 281px;
+  height: 281px; */
   z-index : 1;
-  float:left;
 }
 .mambaContainer {
   -webkit-perspective: 1000;
@@ -70,3 +69,4 @@ label, form, h1 {
   text-align: center;
   background-color: #aaa;
 }
+body{width:2000px}
