--- a/css/styles.css
+++ b/css/styles.css
@@ -27,8 +27,6 @@ label, form, h1 {
   width: 100%;
   text-align: center;
 }
-
-
 .mambaContainer.active .mambaOne {
   -webkit-transform: rotateY(180deg);
   transform: rotateY(180deg);
@@ -36,9 +34,8 @@ label, form, h1 {
 }
 .mambaContainer {
   position: relative;
-  /* margin:10px;
-  width: 450px;
-  height: 281px; */
+  width: 100%;
+  height: 500px;
   z-index : 1;
 }
 .mambaContainer {
@@ -65,8 +62,8 @@ label, form, h1 {
   -webkit-transform: rotateY(180deg);
   transform: rotateY(180deg);
   box-sizing: border-box;
-  color: white;
+  color: yellow;
   text-align: center;
-  background-color: #aaa;
+  font-size: 50px;
+  background-color: #000;
 }
-body{width:2000px}
